[gd_scene load_steps=5 format=3 uid="uid://c6b7y2odwuonp"]

[ext_resource type="Script" path="res://game.gd" id="1_bamb0"]
[ext_resource type="PackedScene" path="res://player.tscn" id="1_ym5bf"]
[ext_resource type="PackedScene" path="res://pine_tree.tscn" id="2_f2uyu"]

[sub_resource type="Curve2D" id="Curve2D_k0e6r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -248, -246, 0, 0, 0, 0, -236, 1206, 0, 0, 0, 0, 2232, 1230, 0, 0, 0, 0, 2220, -242, 0, 0, 0, 0, -252, -242)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_bamb0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -75.0
offset_top = -30.0
offset_right = 1929.0
offset_bottom = 1137.0
scale = Vector2(1.07425, 0.944656)

[node name="Player" parent="." instance=ExtResource("1_ym5bf")]
position = Vector2(940, 524)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-940, -524)
curve = SubResource("Curve2D_k0e6r")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-248, -246)
rotation = 1.56253

[node name="PineTree" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(455, 716)

[node name="PineTree2" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(922, 670)

[node name="PineTree3" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(469, 236)

[node name="PineTree5" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1384, 265)

[node name="PineTree4" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1316, 298)

[node name="PineTree6" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1288, 264)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Score" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 284.0
offset_top = 420.0
offset_right = 370.0
offset_bottom = 499.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 185
text = "GAME OVER"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
